three-d canvas z-index fix

--- a/rebuilder/src/app/components/three-d/three-d.component.css
+++ b/rebuilder/src/app/components/three-d/three-d.component.css
@@ -4,6 +4,7 @@ canvas {
   display: none;
   position: fixed;
   top: 0;
+  z-index: -9999;
 }
 
 .loaded {
